; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_lz4io.c_fseek_u32.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_lz4io.c_fseek_u32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_CUR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @fseek_u32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fseek_u32(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 1073741824, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @SEEK_CUR, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %39

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %33, %15
  %17 = load i32, i32* %6, align 4
  %18 = icmp ugt i32 %17, 0
  br i1 %18, label %19, label %37

19:                                               ; preds = %16
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %10, align 4
  %22 = icmp ugt i32 %21, 1073741824
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 1073741824, i32* %10, align 4
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %10, align 4
  %27 = zext i32 %26 to i64
  %28 = load i32, i32* @SEEK_CUR, align 4
  %29 = call i32 @UTIL_fseek(i32* %25, i64 %27, i32 %28)
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %24
  br label %37

33:                                               ; preds = %24
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %6, align 4
  %36 = sub i32 %35, %34
  store i32 %36, i32* %6, align 4
  br label %16

37:                                               ; preds = %32, %16
  %38 = load i32, i32* %9, align 4
  store i32 %38, i32* %4, align 4
  br label %39

39:                                               ; preds = %37, %14
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @UTIL_fseek(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
